  case-insensitive.

* Issue error message if subroutine for PREFIX-exec is missing.

* Fix [on-match]/[no-match] for loop lists without matchlimit generated from
  embedded Perl objects
    
* Fixed problem where both set_row() and set_slice() would try to get the key
  from last_sequence_value() for returning even if we already know the key and
  even on an UPDATE which can cause problems.

UserDB
------

* Fixed UserDB login issues within embedded Perl by using
  Vend::Util::string_to_ref for deserialization of carts and other 
  hashes.  

* New validchars option to customize valid characters for usernames, e.g.
  adding the + character to the list of valid characters:

  UserDB    default    validchars "-A-Za-z0-9_@.+"

UserTag
-------

* Make [save-cart] keep cart if userdb returns with an error. 

* Make [formel] call [display] on unknown types.

Filter
------

* Added "round" filter to round in floating-point-safe way, using the
  Vend::Util routine.

* Avoid ambiguity between two time formats in date_change filter.

* Added "lspace2nbsp" filter. Translates leading spaces to nbsp

Checks
------

* Added "match" check to match another CGI variable, e.g. for password
  verification.

Payment
-------

* New NetBilling module.

Jobs
----

* Added new job group db with export job to export databases offline for
  backup and version control purposes.

* Added process ID to "Run jobs" and "Finished jobs" log messages for better
  troubleshooting.

* Avoid cluttering global log file with job run messages.

UI
--

* Fix page banner in menu editor.

Standard demo
-------------

* Fixed minor security hole of admin's session ID being exposed when placing
  an order in the admin. Found by Mark Lipscombe <markl@gasupnow.com>.

* Various special_pages/missing.html fixes:
  - Fixed broken admin 404 error page (which came from Standard).
  - Removed duplicate, sometimes-bogus MV_PREV_PAGE display.
  - Eliminated double-interpolation of page comparison.
